
<!--@author:  Albertoha94
    @version: 3
    Change History:
    *15/Mar/16:             -File completely styled.
                            -Modified the settings button to info button. This new button has a new
                            icon an a different dimension.
    *17/Mar/16:             -Added a gravity property to the title.
    *19/Mar/16:             -Added a banner.
-->

<android.support.design.widget.CoordinatorLayout
    tools:context=".A_Menu"
    android:id="@+id/cl_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rl_mainmenu"
        tools:ignore="MergeRootFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/rl_animationitems"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/b_animation10"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/b_animation_size"
                android:layout_height="@dimen/b_animation_size" />

            <Button
                android:text=""
                android:id="@+id/b_animation9"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/b_animation_size"
                android:layout_height="@dimen/b_animation_size" />

            <Button
                android:text=""
                android:id="@+id/b_animation8"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/b_animation_size"
                android:layout_height="@dimen/b_animation_size" />

            <Button
                android:text=""
                android:id="@+id/b_animation7"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/b_animation_size"
                android:layout_height="@dimen/b_animation_size" />

            <Button
                android:text=""
                android:id="@+id/b_animation6"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/b_animation_size"
                android:layout_height="@dimen/b_animation_size" />

            <Button
                android:text=""
                android:id="@+id/b_animation5"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/b_animation_size"
                android:layout_height="@dimen/b_animation_size" />

            <Button
                android:text=""
                android:id="@+id/b_animation4"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/b_animation_size"
                android:layout_height="@dimen/b_animation_size" />

            <Button
                android:text=""
                android:id="@+id/b_animation3"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/b_animation_size"
                android:layout_height="@dimen/b_animation_size" />

            <Button
                android:text=""
                android:id="@+id/b_animation2"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/b_animation_size"
                android:layout_height="@dimen/b_animation_size" />

            <Button
                android:text=""
                android:id="@+id/b_animation1"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/b_animation_size"
                android:layout_height="@dimen/b_animation_size" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_menuitems"
            android:layout_above="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="?attr/TextTitle"
                android:gravity="center"
                android:id="@+id/tv_menutitle"
                android:text="@string/app_name"
                android:layout_below="@+id/ib_info" />

            <Button
                style="?attr/ButtonMenu"
                android:id="@+id/b_single"
                android:text="@string/mode_scolor"
                android:layout_below="@+id/b_100t"
                android:layout_centerHorizontal="true" />

            <Button
                style="?attr/ButtonMenu"
                android:id="@+id/b_100t"
                android:text="@string/mode_25t"
                android:layout_centerVertical="true" />

            <Button
                android:id="@+id/b_min"
                style="?attr/ButtonMenu"
                android:text="@string/mode_1min"
                android:layout_above="@+id/b_100t" />

            <ImageButton
                style="?attr/ButtonIcon"
                android:id="@+id/ib_stats"
                android:src="@drawable/ic_stats"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true" />

            <ImageButton
                style="?attr/ButtonIcon"
                android:src="@drawable/ic_leader"
                android:id="@+id/ib_leaderboards"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true" />

            <ImageButton
                style="?attr/ButtonIcon"
                android:id="@+id/ib_info"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_width="@dimen/ib_info_size"
                android:layout_height="@dimen/ib_info_size"
                android:src="@android:drawable/ic_menu_info_details" />

            <ImageButton
                style="?attr/ButtonIcon"
                android:id="@+id/ib_achievements"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_achievement"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            ads:adSize="SMART_BANNER "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adUnitId="@string/ad_banner">

        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>